# neatbio

./: README.md  pyproject.toml
neatbio/: __init__.py  neatbio.py
neatbio/sequtils/: __init__.py  sequtils.py
tests/: test_neatbio.py
