[tool.poetry]
name = "neatbio"
version = "0.0.1"
description = "NeatBio - a simple yet another bioinformatics library for DNA sequence"
authors = ["Kacper Kaszuba <kacper_kaszuba0608@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
